--- a/config/AX6.config
+++ b/config/AX6.config
@@ -37,11 +37,12 @@ CONFIG_PACKAGE_kmod-zram=y
 CONFIG_PACKAGE_zram-swap=y
 
 #ipv6
-CONFIG_PACKAGE_ipv6helper=y
-CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
-CONFIG_PACKAGE_6in4=y
-CONFIG_PACKAGE_6rd=y
-CONFIG_PACKAGE_6to4=y
+#CONFIG_PACKAGE_ipv6helper=y
+#CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
+#CONFIG_PACKAGE_6in4=y
+#CONFIG_PACKAGE_6rd=y
+#CONFIG_PACKAGE_6to4=y
+
 
 #删除默认的USB相关
 # CONFIG_PACKAGE_kmod-usb-core is not set
@@ -52,7 +53,7 @@ CONFIG_PACKAGE_6to4=y
 #插件区
 # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
 
-#CONFIG_PACKAGE_luci-app-adguardhome=y
+CONFIG_PACKAGE_luci-app-adguardhome=y
 
 # CONFIG_PACKAGE_luci-app-advanced is not set
 # CONFIG_PACKAGE_luci-app-filetransfer is not set
@@ -60,8 +61,8 @@ CONFIG_PACKAGE_6to4=y
 
 CONFIG_PACKAGE_luci-app-easymesh=y
 
-CONFIG_PACKAGE_luci-app-frpc=y
-CONFIG_PACKAGE_luci-app-frps=y
+#CONFIG_PACKAGE_luci-app-frpc=y
+#CONFIG_PACKAGE_luci-app-frps=y
 
 CONFIG_PACKAGE_luci-app-guest-wifi=y
 
@@ -70,16 +71,16 @@ CONFIG_PACKAGE_luci-app-guest-wifi=y
 
 CONFIG_PACKAGE_luci-app-jd-dailybonus=y
 CONFIG_PACKAGE_luci-app-ddns=y
-CONFIG_PACKAGE_luci-app-mwan3=y
-CONFIG_PACKAGE_luci-app-mwan3helper=y
+#CONFIG_PACKAGE_luci-app-mwan3=y
+#CONFIG_PACKAGE_luci-app-mwan3helper=y
 #CONFIG_PACKAGE_luci-app-dawn=y
-CONFIG_PACKAGE_luci-app-n2n_v2=y
+#CONFIG_PACKAGE_luci-app-n2n_v2=y
 
 CONFIG_PACKAGE_luci-app-netdata=y
 
 CONFIG_PACKAGE_luci-app-ntpc=y
 CONFIG_PACKAGE_luci-app-dnsfilter=y
-CONFIG_PACKAGE_luci-app-nps=y
+#CONFIG_PACKAGE_luci-app-nps=y
 
 #CONFIG_PACKAGE_luci-app-oaf=y
 
@@ -92,7 +93,7 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Server=y
 
 CONFIG_PACKAGE_luci-app-pppoe-relay=y
 
-CONFIG_PACKAGE_luci-app-pptp-server=y
+#CONFIG_PACKAGE_luci-app-pptp-server=y
 
 CONFIG_PACKAGE_luci-app-pushbot=y
 
