--- a/config/AX6.config
+++ b/config/AX6.config
@@ -51,11 +51,11 @@ CONFIG_PACKAGE_zram-swap=y
 # CONFIG_PACKAGE_kmod-usb-dwc3-qcom is not set
 
 #插件区
-# CONFIG_PACKAGE_luci-app-adbyby-plus is not set
+CONFIG_PACKAGE_luci-app-adbyby-plus=y
 
 CONFIG_PACKAGE_luci-app-adguardhome=y
 
-# CONFIG_PACKAGE_luci-app-advanced is not set
+CONFIG_PACKAGE_luci-app-advanced=y
 # CONFIG_PACKAGE_luci-app-filetransfer is not set
 
 
