--- a/config/AX6_5.10.100.config
+++ b/config/AX6_5.10.100.config
@@ -73,11 +73,6 @@ CONFIG_PACKAGE_luci-app-dnsfilter=y
 
 
 
-
-
-
-
-
 # CONFIG_PACKAGE_luci-app-bypass is not set
 # CONFIG_PACKAGE_luci-app-bypass_INCLUDE_Shadowsocks_Libev_Client is not set
 # CONFIG_PACKAGE_luci-app-bypass_INCLUDE_ShadowsocksR_Libev_Client is not set
@@ -109,3 +104,9 @@ CONFIG_PACKAGE_luci-app-ttyd=y
 
 # CONFIG_PACKAGE_luci-theme-argon is not set
 #CONFIG_PACKAGE_luci-theme-infinityfreedom=y
+
+
+#插件区
+CONFIG_PACKAGE_luci-app-adguardhome=y
+CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_luci-app-netdata=y
