--- a/config/AX6_5.10.100.config
+++ b/config/AX6_5.10.100.config
@@ -51,7 +51,7 @@ CONFIG_PACKAGE_luci-app-ddns=y
 CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-syncdial=y
 
-# CONFIG_PACKAGE_luci-app-netdata is not set
+
 # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
 # CONFIG_PACKAGE_luci-app-easymesh is not set
 CONFIG_PACKAGE_luci-app-guest-wifi=y
@@ -68,8 +68,6 @@ CONFIG_PACKAGE_luci-app-dnsfilter=y
 # CONFIG_PACKAGE_luci-app-eqos is not set
 # CONFIG_PACKAGE_luci-app-sqm is not set
 # CONFIG_PACKAGE_luci-app-unblockneteasemusic is not set
-# CONFIG_PACKAGE_luci-theme-argon is not set
-# CONFIG_PACKAGE_luci-app-argon-config is not set
 
 
 
@@ -102,7 +100,7 @@ CONFIG_PACKAGE_luci-app-ttyd=y
 # CONFIG_PACKAGE_luci-app-wifischedule is not set
 # CONFIG_PACKAGE_luci-app-nlbwmon is not set
 
-# CONFIG_PACKAGE_luci-theme-argon is not set
+
 #CONFIG_PACKAGE_luci-theme-infinityfreedom=y
 
 
@@ -110,3 +108,4 @@ CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-app-netdata=y
+CONFIG_PACKAGE_luci-app-argon-config=y
