--- a/config/AX6_5.10.100.config
+++ b/config/AX6_5.10.100.config
@@ -105,7 +105,7 @@ CONFIG_PACKAGE_luci-app-ttyd=y
 
 
 #插件区
-CONFIG_PACKAGE_luci-app-adguardhome=y
+#CONFIG_PACKAGE_luci-app-adguardhome is not set
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-app-netdata=y
 CONFIG_PACKAGE_luci-app-argon-config=y
