--- a/config/AX6.config
+++ b/config/AX6.config
@@ -37,11 +37,11 @@ CONFIG_PACKAGE_kmod-zram=y
 CONFIG_PACKAGE_zram-swap=y
 
 #ipv6
-CONFIG_PACKAGE_ipv6helper=y
-CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
-CONFIG_PACKAGE_6in4=y
-CONFIG_PACKAGE_6rd=y
-CONFIG_PACKAGE_6to4=y
+#CONFIG_PACKAGE_ipv6helper=y
+#CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
+#CONFIG_PACKAGE_6in4=y
+#CONFIG_PACKAGE_6rd=y
+#CONFIG_PACKAGE_6to4=y
 
 #删除默认的USB相关
 # CONFIG_PACKAGE_kmod-usb-core is not set
@@ -137,3 +137,11 @@ CONFIG_PACKAGE_luci-proto-wireguard=y
 
 #主题
 CONFIG_PACKAGE_luci-theme-infinityfreedom=y
+#插件区
+#CONFIG_PACKAGE_luci-app-adguardhome is not set
+CONFIG_PACKAGE_luci-theme-argon=y
+
+CONFIG_PACKAGE_luci-theme-argon_armygreen=y
+
+CONFIG_PACKAGE_luci-app-netdata=y
+CONFIG_PACKAGE_luci-app-argon-config=y
