--- a/.github/workflows/5.10-AX6.yml
+++ b/.github/workflows/5.10-AX6.yml
@@ -34,7 +34,7 @@ env:
   REPO_URL: https://github.com/admin6750217/lede
   REPO_BRANCH: master 
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: config/AX6.config
+  CONFIG_FILE: config/AX6_5.10.100.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   UPLOAD_BIN_DIR: true
