--- a/.github/workflows/5.10-AX6.yml
+++ b/.github/workflows/5.10-AX6.yml
@@ -36,6 +36,7 @@ env:
   CONFIG_FILE: config/AX6_5.10.100.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
+  DIY_P3_SH: diy-part3.sh
   UPLOAD_BIN_DIR: true
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: true
