--- a/config/AX6_5.10.100.config
+++ b/config/AX6_5.10.100.config
@@ -81,6 +81,7 @@ CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
 CONFIG_PACKAGE_luci-theme-ifit=y
 CONFIG_PACKAGE_luci-theme-mcat=y
+CONFIG_PACKAGE_luci-theme-argon_armygreen=y
 CONFIG_PACKAGE_mwan3=y
 CONFIG_PACKAGE_netdata=y
 CONFIG_PACKAGE_node=y
