--- a/.github/workflows/5.10-AX6.yml
+++ b/.github/workflows/5.10-AX6.yml
@@ -30,8 +30,8 @@ on:
   #  每周五凌晨四点自动编译。
 
 env:
-  #REPO_URL: https://github.com/admin6750217/lede
-  REPO_URL: https://github.com/Boos4721/openwrt
+  REPO_URL: https://github.com/admin6750217/lede
+  #REPO_URL: https://github.com/Boos4721/openwrt
   REPO_BRANCH: master 
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: config/AX6_5.10.100.config
