--- a/.github/workflows/5.15-purple-AX6.yml
+++ b/.github/workflows/5.15-purple-AX6.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #============================================================
 
-name: 5.10-AX6
+name: 5.15-purple-AX6
 
 on:
   repository_dispatch:
@@ -31,10 +31,9 @@ on:
 
 env:
   REPO_URL: https://github.com/admin6750217/lede
-  #REPO_URL: https://github.com/Boos4721/openwrt
   REPO_BRANCH: master 
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: config/AX6_5.10.100.config
+  CONFIG_FILE: config/AX6_purple.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   DIY_P3_SH: diy-part3.sh
@@ -44,8 +43,8 @@ env:
   UPLOAD_WETRANSFER: true
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
-  FILE_NAME: 5.10-AX6
-  PRODUCT_NAME: 5.10-AX6
+  FILE_NAME: 5.15-purple-AX6
+  PRODUCT_NAME: 5.15-purple-AX6
 
 jobs:
   build:
