--- a/.github/workflows/5.15-purple-AX6.yml
+++ b/.github/workflows/5.15-purple-AX6.yml
@@ -30,8 +30,8 @@ on:
   #  每周五凌晨四点自动编译。
 
 env:
-  REPO_URL: https://github.com/admin6750217/lede
-  REPO_BRANCH: master 
+  REPO_URL: https://github.com/robimarko/openwrt
+  REPO_BRANCH: ipq807x-5.15-pr 
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: config/AX6_purple.config
   DIY_P1_SH: diy-part1.sh
