--- a/config/AX6_purple.config
+++ b/config/AX6_purple.config
@@ -48,7 +48,7 @@ CONFIG_PACKAGE_zram-swap=y
 #CONFIG_PACKAGE_6rd=y
 #CONFIG_PACKAGE_6to4=y
 
-# CONFIG_PACKAGE_dnsmasq is not set
+CONFIG_PACKAGE_dnsmasq is not set
 CONFIG_PACKAGE_dnsmasq-full=y
 CONFIG_PACKAGE_dnsmasq_full_auth=y
 CONFIG_PACKAGE_dnsmasq_full_conntrack=y
@@ -57,6 +57,12 @@ CONFIG_PACKAGE_dnsmasq_full_dnssec=y
 CONFIG_PACKAGE_dnsmasq_full_ipset=y
 CONFIG_PACKAGE_dnsmasq_full_noid=y
 CONFIG_PACKAGE_dnsmasq_full_tftp=y
+
+# CONFIG_PACKAGE_dnsmasq_full_dhcpv6 is not set
+# CONFIG_PACKAGE_etherwake is not set
+# CONFIG_PACKAGE_ipt2socks is not set
+CONFIG_PACKAGE_iptables-mod-fullconenat=y
+CONFIG_PACKAGE_iptables-mod-ipopt=y
 
 #删除默认的USB相关
 # CONFIG_PACKAGE_kmod-usb-core is not set
