--- a/config/AX6_purple.config
+++ b/config/AX6_purple.config
@@ -72,7 +72,7 @@ CONFIG_PACKAGE_iptables-mod-extra=y
 
 
 #主题
-CONFIG_PACKAGE_luci-theme-argon=y
+# CONFIG_PACKAGE_luci-theme-argon is not set
 CONFIG_PACKAGE_luci-theme-argon-lr=y
 CONFIG_PACKAGE_luci-theme-ifit=y
 CONFIG_PACKAGE_luci-theme-argon_armygreen=y
