--- a/config/AX6_purple.config
+++ b/config/AX6_purple.config
@@ -84,7 +84,7 @@ CONFIG_PACKAGE_luci-app-ntpc=y
 CONFIG_PACKAGE_luci-app-openclash=y
 
 # CONFIG_PACKAGE_luci-app-qos is not set
-CONFIG_PACKAGE_luci-app-smartdns=y
+# CONFIG_PACKAGE_luci-app-smartdns is not set
 CONFIG_PACKAGE_luci-app-ttyd=y
 
 #CONFIG_PACKAGE_luci-app-adguardhome is not set
