--- a/config/AX6_purple.config
+++ b/config/AX6_purple.config
@@ -118,12 +118,19 @@ CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 
 CONFIG_PACKAGE_luci-app-wifischedule=y
+CONFIG_PACKAGE_luci-i18n-wifischedule-zh-cn=y
+
 
 
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-opkg=y
 CONFIG_PACKAGE_luci-base=y
 CONFIG_PACKAGE_luci-lib-base=y
+CONFIG_PACKAGE_luci-i18n-diag-core-en=y
+CONFIG_PACKAGE_luci-i18n-diag-core-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-dnsfilter-zh-cn=y
+
+
 CONFIG_PACKAGE_luci-lib-ip=y
 CONFIG_PACKAGE_luci-lib-jsonc=y
 CONFIG_PACKAGE_luci-lib-nixio=y
@@ -143,6 +150,9 @@ CONFIG_PACKAGE_rpcd-mod-rrdns=y
 CONFIG_PACKAGE_uhttpd=y
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
 
+CONFIG_PACKAGE_mwan3=y
+
+CONFIG_PACKAGE_luci-app-diag-core=y
 
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_luci-theme-ifit=y
