--- a/.github/workflows/5.15-purple-AX6.yml
+++ b/.github/workflows/5.15-purple-AX6.yml
@@ -108,11 +108,10 @@ jobs:
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P1_SH
         
-    - name: Update feeds
-      run: cd openwrt && ./scripts/feeds update -a
-
-    - name: Install feeds
-      run: cd openwrt && ./scripts/feeds install -a
+    - name: Update and install feeds
+      run: |
+        ./scripts/feeds update -a
+        ./scripts/feeds install -a
       
     - name: Load custom configuration
       run: |
@@ -142,6 +141,17 @@ jobs:
         make download -j8
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
+        
+    - name: Build tools
+      run: |
+        make tools/install -j$(nproc) V=s || \
+        make tools/install V=s   
+                
+    - name: Build toolchain
+      run: |
+        make toolchain/install -j$(nproc) V=s || \
+        make toolchain/install V=s   
+        
     - name: Compile the firmware
       id: compile
       run: |
