--- a/.github/workflows/5.15-purple-AX6.yml
+++ b/.github/workflows/5.15-purple-AX6.yml
@@ -101,8 +101,8 @@ jobs:
         echo "DATE=$(date "+%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
         echo "DATE1=$(date "+%Y-%m-%d")" >> $GITHUB_ENV
         
-###################添加lean的cpu频率和温度显示
-#autocore: merge immortalwrt version
+#       添加lean的cpu频率和温度显示#autocore: merge immortalwrt version
+
         svn co https://github.com/Boos4721/openwrt/package/lean/trunk/lean package/lean
 
 #        svn co https://github.com/kenzok8/openwrt-packages/trunk/luci-app-passwall package/luci-app-passwall
