--- a/.github/workflows/5.15-AX3600.yml
+++ b/.github/workflows/5.15-AX3600.yml
@@ -19,7 +19,7 @@ on:
         required: false
         default: 'false'      
   schedule:
-     - cron: 30 17 * * *
+     - cron: 30 17 * * fri
   #  每天晚上凌晨0点自动编译.
   #  watch:
   #    types: started
